snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1-all.jar.sha256
0886c7ffedf0e0f83ee7f28172342616e8e727558cb082759f47139054aa40d9